# compose-lvgl

./: CMakeLists.txt  CMakePresets.json  my_lv_conf.h  sdl_lv_conf.h
example/: CMakeLists.txt
example/src/: svg_demo.cpp  svg_example.cpp
example/src/virtual-list-demo/: VirtualListDemoApp.cpp
include/compose/: ComposeApplication.h  FontDefaults.h.in  FreeTypeFont.h  SVGDocumentCache.h  SVGRender.h  TextWrap.h
include/compose/input/: TouchIndev.h
include/compose/modifiers/: Align.h  AttachOptions.h  BackgroundColor.h  Border.h  Clickable.h  Color.h  Expand.h  FlexFlow.h  Font.h  FontSize.h  FontWeight.h  Hidden.h  Homogeneous.h  Justify.h  LabelCrop.h  LetterSpacing.h  Margin.h  Modifiers.h  MonoSpaceNumbers.h  Orientation.h  OverflowBehaviour.h  Padding.h  PanedLocked.h  PanedPosition.h  PixelSize.h  Position.h  Precision.h  PrimaryColor.h  Readonly.h  Rect.h  Rotation.h  RoundedCorner.h  SVGPath.h  Scrollable.h  Size.h  Spacing.h  StyleSheet.h  StyleSheetJson.h  StyleSheets.h  Text.h  (+1 more)
include/compose/state/: CanvasData.h  FontStorage.h  LabelData.h  SVGData.h
include/compose/widgets/: Application.h  BaseWidget.h  BitmapCache.h  Button.h  ConfirmationMessageBox.h  CustomDrawingElement.h  DrawContext.h  Label.h  LabelShared.h  MultiLineLabel.h  Overlay.h  SVGImage.h  SVGRenderer.h  Widget.h  Window.h
include/compose/widgets/container/: Container.h  Fixed.h  HorizontalList.h  List.h  VerticalList.h  VirtualizedList.h
include/compose/widgets/handler/: Clicks.h  DragDrop.h  Handlers.h
src/: FreeTypeFont.cpp
src/common/: FreeTypeFont.cpp  SVGDocumentCache.cpp  SVGRender.cpp
src/common/input/: TouchGestureFeed.cpp  TouchGestureFeed.h
src/common/modifiers/: StyleSheetJson.cpp
src/common/state/: CanvasData.cpp  SVGData.cpp
src/common/widgets/: Application.cpp  BitmapCache.cpp  Button.cpp  ConfirmationMessageBox.cpp  CustomDrawingElement.cpp  DragDrop.cpp  DrawContext.cpp  Label.cpp  List.cpp  MultiLineLabel.cpp  Overlay.cpp  SVGRenderer.cpp  VirtualizedList.cpp  Widget.cpp  Window.cpp
src/drm/: DRMWindow.cpp
src/framebuffer/: FramebufferWindow.cpp
src/sdl/: SDLWindow.cpp
src/state/: CanvasData.cpp  SVGData.cpp
src/widgets/: Application.cpp  Button.cpp  CustomDrawingElement.cpp  DrawContext.cpp  Label.cpp  MultiLineLabel.cpp  SVGImage.cpp  SVGRenderer.cpp  Window.cpp
src/widgets/container/: Container.cpp  Fixed.cpp
tests/: test_basewidget.cpp  test_stylesheet_json.cpp
tests/manual/: VirtualListDemoApp.cpp  VirtualListDemoApp.h  VirtualListDemoMain.cpp
